统一异常处理，thymeleaf模板

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # \u5173\u95ED\u7F13\u4ECE\uFF0C\u5373\u65F6\u5237\u65B0
 #spring.freemarker.cache=false
-spring.thymeleaf.cache=true
+
 
 # spring 热部署
 spring.devtools.restart.enabled=true
@@ -12,3 +12,37 @@ spring.devtools.restart.additional-paths=src/main/java
 #server.context-path=/IMooc
 #server.session-timeout=60
 #server.address=
+
+
+############################################################
+#
+# 配置i18n资源文件、供thymeleaf读取
+#
+############################################################
+spring.messages.basename=i18n/messages
+spring.messages.cache-duration=3600
+spring.messages.encoding=UTF-8
+
+
+# 设置静态文件路径,js,css等
+spring.mvc.static-path-pattern=/static/**
+
+
+############################################################
+#
+# thymeleaf 静态资源配置
+#
+############################################################
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.mode=HTML5
+spring.thymeleaf.encoding=UTF-8
+spring.thymeleaf.servlet.content-type=text/html
+# 关闭缓从，即时刷新，线上生产环境改为true
+spring.thymeleaf.cache=false
+
+
+
+
+
+
