--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -54,6 +54,12 @@
 			<optional>true</optional>
 		</dependency>
 		
+		<!-- 引入 thymeleaf 模板依赖 -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
+				
 	</dependencies>
 
 	<build>
